--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/EditSearchProfileContacts.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/EditSearchProfileContacts.cshtml
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <td>@Html.LabelFor(m => m.SearchProfileContacts, "Contacts")</td>
-                <td><select id="searchprofile_selectContacts" multiple="multiple" data-placeholder="Select contacts..." /></td>
+                <td><select id="searchprofile_selectContacts" multiple="multiple" data-placeholder="Select contacts..." style="min-width:200px" /></td>
             </tr>
         </table>
         <br />
