--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/ChannelPerf.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/ChannelPerf.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="row">
-    <div class="twelve columns">
+    <div class="large-12 columns">
         <div class="searchpanel" id="channelperfOuter">
             <b>Channel Performance</b>
             <a class="button paddedbutton" style="float: right" href="#" onclick="ExportChannelPerfCSV(); return false">Export CSV</a>
