--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Monthly.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Monthly.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="row">
-    <div class="twelve columns">
+    <div class="large-12 columns">
         <div class="searchpanel" id="monthsumOuter">
             <b>Monthly Summary</b>
             <a class="button paddedbutton" style="float: right" href="#" onclick="ExportMonthSumCSV(); return false">Export CSV</a>
@@ -9,14 +9,14 @@
 </div>
 
 <div class="row">
-    <div class="six columns">
+    <div class="large-6 columns">
         <div id="monthrevChartSection" class="k-content">
             <div class="chart-wrapper">
                 <div id="monthrevChart"></div>
             </div>
         </div>
     </div>
-    <div class="six columns">
+    <div class="large-6 columns">
         <div id="monthorderChartSection" class="k-content">
             <div class="chart-wrapper">
                 <div id="monthorderChart"></div>
