--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_Portal.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_Portal.cshtml
@@ -42,6 +42,9 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/foundation")
+    <script>
+        $(document).foundation();
+    </script>
     @if (includeGoogleVis) {
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript">
