--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/OfferGoalsRow.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/OfferGoalsRow.cshtml
@@ -14,7 +14,7 @@
 }
 
 <!-- Left -->
-<div class="six columns">
+<div class="large-6 columns">
     <div class="panel" id="goal@(Model.Id)SumPanel" style="min-height: 250px">
         <span class="offergoalsheader">
             <b>Offer: @Model.Offer.OfferName</b>
@@ -84,7 +84,7 @@
 </div>
 
 <!-- Right -->
-<div class="panel six columns" id="goal@(Model.Id)ChartOuter">
+<div class="panel large-6 columns" id="goal@(Model.Id)ChartOuter">
     <div id="goal@(Model.Id)ChartHeading"></div>
 
     <div class="chart-wrapper">
