--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Dashboard.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Dashboard.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="row">
-    <div class="twelve columns">
+    <div class="large-12 columns">
         <div class="searchpanel" id="weeksumOuter">
             <b>Weekly Summary</b>
             <a class="button paddedbutton" style="float: right" href="#" onclick="ExportWeekSumCSV(); return false">Export CSV</a>
@@ -9,14 +9,14 @@
 </div>
 
 <div class="row">
-    <div class="six columns">
+    <div class="large-6 columns">
         <div id="weekrevChartSection" class="k-content">
             <div class="chart-wrapper">
                 <div id="weekrevChart"></div>
             </div>
         </div>
     </div>
-    <div class="six columns">
+    <div class="large-6 columns">
         <div id="weekorderChartSection" class="k-content">
             <div class="chart-wrapper">
                 <div id="weekorderChart"></div>
